# SkyPi

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE.md  README.md  SkyPi.c  SkyPi.cbp  TODO  clockrd.4dg  rtcset.4dg  skypi-files
Include/: Picaso_Serial_4DLibrary.h  Picaso_Types4D.h  SkyPi.h  config.h  config.h.in
Lib/: Astro.c  CMakeLists.txt  Picaso_Compound4DRoutines.inc  Picaso_Intrinsic4DRoutines.inc  Picaso_Serial_4DLibrary.c  PlanetTerms.inc  Vsop87.c
data/: hyg11.csv
keypad/: keypad.gci  keypad.inc  keypad.kbd
lcddigits/: digits.gci  lcddigits.gcs
